// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ログイン時 1`] = `
<header
  className="body h-28 w-full"
>
  <div
    className="menu flex items-center justify-center h-20 w-screen bg-white absolute top-8"
  >
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      <div>
        <img
          alt="bridge-logo"
          className="titleiconimg"
          data-nimg="1"
          decoding="async"
          height={80}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimages%2Flogo%2Fheader_logo.png&w=384&q=75"
          srcSet="/_next/image?url=%2Fimages%2Flogo%2Fheader_logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Flogo%2Fheader_logo.png&w=384&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={150}
        />
      </div>
    </a>
    <ul
      className="left flex gap-10 mr-60 ml-30 whitespace-nowrap"
    >
      <li>
        <a
          href="/items/itemlist"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          商品
        </a>
      </li>
      <li>
        <a
          className="toRemind"
          href="/#remind"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          お知らせ
        </a>
      </li>
      <li>
        ヘルプ
      </li>
    </ul>
    <div
      className="right flex gap-10"
    >
      <form
        className="form"
        onSubmit={[Function]}
      >
        <input
          className="formtitle h-8 border border-neutral-500 rounded-l pl-2.5"
          onChange={[Function]}
          placeholder="何をお探しですか？"
          type="text"
          value=""
        />
        <a
          href="/items/itemlist/search?genre=北欧風&genre=ナチュラル&genre=和モダン&genre=フェミニン&category=椅子&category=テーブル&category=カーテン&category=照明&category=カーペット%2Fラグ&category=ソファ&category=収納棚&category=ベッド%2F寝具&category=小物%2F雑貨&input=&order=id.desc&page=0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <button
            className="searchsh-8 text-white bg-neutral-900 border border-neutral-900 rounded-r px-1"
            type="submit"
          >
            <span
              className="search"
            >
              検索
            </span>
          </button>
        </a>
      </form>
      <a
        className="iconModule"
        href="/mypage"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <img
          alt=""
          className="iconimg"
          data-nimg="1"
          decoding="async"
          height={25}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimages%2Ficon%2Flogin.png&w=64&q=75"
          srcSet="/_next/image?url=%2Fimages%2Ficon%2Flogin.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2Ficon%2Flogin.png&w=64&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={25}
        />
        <div>
          <span
            className="menuLabel inline-block mt-1"
          >
            マイページ
          </span>
        </div>
      </a>
      <a
        className="iconModule"
        href="/cart"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="loader"
        />
        <img
          alt=""
          className="iconimg"
          data-nimg="1"
          decoding="async"
          height={25}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75"
          srcSet="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={25}
        />
        <span
          className="menuLabel inline-block mt-1 whitespace-nowrap"
        >
          カート
        </span>
      </a>
    </div>
  </div>
</header>
`;

exports[`未ログイン 1`] = `
<header
  className="body h-28 w-full"
>
  <div
    className="menu flex items-center justify-center h-20 w-screen bg-white absolute top-8"
  >
    <a
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      <div>
        <img
          alt="bridge-logo"
          className="titleiconimg"
          data-nimg="1"
          decoding="async"
          height={80}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimages%2Flogo%2Fheader_logo.png&w=384&q=75"
          srcSet="/_next/image?url=%2Fimages%2Flogo%2Fheader_logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Flogo%2Fheader_logo.png&w=384&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={150}
        />
      </div>
    </a>
    <ul
      className="left flex gap-10 mr-60 ml-30 whitespace-nowrap"
    >
      <li>
        <a
          href="/items/itemlist"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          商品
        </a>
      </li>
      <li>
        <a
          className="toRemind"
          href="/#remind"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          お知らせ
        </a>
      </li>
      <li>
        ヘルプ
      </li>
    </ul>
    <div
      className="right flex gap-10"
    >
      <form
        className="form"
        onSubmit={[Function]}
      >
        <input
          className="formtitle h-8 border border-neutral-500 rounded-l pl-2.5"
          onChange={[Function]}
          placeholder="何をお探しですか？"
          type="text"
          value=""
        />
        <a
          href="/items/itemlist/search?genre=北欧風&genre=ナチュラル&genre=和モダン&genre=フェミニン&category=椅子&category=テーブル&category=カーテン&category=照明&category=カーペット%2Fラグ&category=ソファ&category=収納棚&category=ベッド%2F寝具&category=小物%2F雑貨&input=&order=id.desc&page=0"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <button
            className="searchsh-8 text-white bg-neutral-900 border border-neutral-900 rounded-r px-1"
            type="submit"
          >
            <span
              className="search"
            >
              検索
            </span>
          </button>
        </a>
      </form>
      <a
        className="iconModule"
        href="/login"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <img
          alt=""
          className="iconimg"
          data-nimg="1"
          decoding="async"
          height={25}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimages%2Ficon%2Flogin.png&w=64&q=75"
          srcSet="/_next/image?url=%2Fimages%2Ficon%2Flogin.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2Ficon%2Flogin.png&w=64&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={25}
        />
        <div>
          <span
            className="menuLabel inline-block mt-1 whitespace-nowrap"
          >
            ログイン
          </span>
        </div>
      </a>
      <a
        className="iconModule"
        href="/cart"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <img
          alt=""
          className="iconimg"
          data-nimg="1"
          decoding="async"
          height={25}
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75"
          srcSet="/_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=32&q=75 1x, /_next/image?url=%2Fimages%2Ficon%2Fcart.png&w=64&q=75 2x"
          style={
            {
              "color": "transparent",
            }
          }
          width={25}
        />
        <span
          className="menuLabel inline-block mt-1 whitespace-nowrap"
        >
          カート
        </span>
      </a>
    </div>
  </div>
</header>
`;
